--- a/week3b.html
+++ b/week3b.html
@@ -9,13 +9,27 @@
   <meta charset='utf-8'>
   <title>Assignment 3 Part 2 CS290</title>
   <script src='week3b.js'></script>
+  <!-- Note: omit type="text/css" per google-styleguide -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="output"></div>
   <form>
+    <h1>Search Parameters</h1>
     <input type='text' name='demo-input'>
     <input type='button' name='save' onclick='saveDemoInput()' value = 'Save Text'>
+    <div>
+      <label>Page Number:</label>
+      <input type="number" name="numerical_input" />
+    </div>
   </form>
+  <br>
+  <section>
+    <div>
+    <h1>Favorites<h1>
+    <input type="number" name="getGist">
+    </div>
+  </section>
   <br>
   <section>
     <div>
