--- a/week3b.html
+++ b/week3b.html
@@ -16,12 +16,17 @@
   <div id="output"></div>
   <form>
     <h1>Search Parameters</h1>
-    <input type='text' name='demo-input'>
-    <input type='button' name='save' onclick='saveDemoInput()' value = 'Save Text'>
-    <input type='button' name='getGist' onclick='getGistList(1)' value = 'Gist Request'>
     <div>
+      <div>
       <label>Page Number:</label>
       <input type='number' name='numerical_input' />
+      </div>
+      <div>
+      <label>Language:</label>
+      <input type='language' name='language_input' />
+      </div>
+    <input type='button' name='save' onclick='saveLocalSearch()' value = 'Save Text'>
+    <input type='button' name='getGist' onclick='getGistList(1)' value = 'Gist Request'>
     </div>
   </form>
   <br>
