--- a/week3b.html
+++ b/week3b.html
@@ -18,26 +18,45 @@
     <div id="output"></div>
     <div>
       <label>Page Number:</label>
-      <input type='number' name='page_input' />
+        <select name=page_input>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
       </div>
       <div>
         <label>Language:</label>
-        <input type='language' name='language_input' />
+        <div>
+          <fieldset>
+            <p>Select between:</p>
+            <input type="radio" name="language_input" value="All"><label>ALL</label><br>
+            <input type="radio" name="language_input" value="Python"><label>Python</label><br>
+            <input type="radio" name="language_input" value="JSON"><label>JSON</label><br>
+            <input type="radio" name="language_input" value="JavaScript"><label>JavaScript</label><br>
+            <input type="radio" name="language_input" value="SQL"><label>SQL</label><br> 
+          </fieldset>
+        </div>
     </div>
     <input type='button' name='save' onclick='saveLocalSearch()' value = 'Save Search'>
-    <input type='button' name='getGist'  value = 'Make Gist Request'>
+    <input type='button' name='getGist' onclick='gistPages.loadGistPages()' value = 'Make Gist Request'>
   </div>
   <br>
   <section>
-    <h1>Favorites<h1>
+    <h1>Favorites</h1>
+    <p>
       <div id="favoritesList">
       </div>
+    </p>
   </section>
   <br>
   <section>
-    <h1>Search Results<h1>
+    <h1>Search Results</h1>
+    <p>
        <div id="searchResults">
       </div>
+    </p>
   </section>
  </body>
 </html>
